Implement PUT ProjectConsent endpoint, fix validation of data-models
