# consents-service/data/models/project_consent.go
@@ -4,8 +4,6 @@ import (
 	"encoding/json"
 	"time"
 
-	customValidators "github.com/dycons/consents/consents-service/utilities/validators"
-	"github.com/gobuffalo/nulls"
 	"github.com/gobuffalo/pop"
 	"github.com/gobuffalo/uuid"
 	"github.com/gobuffalo/validate"
@@ -43,19 +41,5 @@ func (p *ProjectConsent) Validate(tx *pop.Connection) (*validate.Errors, error) 
 	return validate.Validate(
 		&validators.UUIDIsPresent{Field: p.ParticipantID, Name: "ParticipantID"},
 		&validators.IntIsGreaterThan{Field: p.ProjectApplicationID, Name: "ProjectApplicationID", Compared: -1},
-		&customValidators.IsNotNull{Field: nulls.Nulls{Value: p.GeneticConsent}, Name: "GeneticConsent"},
-		&customValidators.IsNotNull{Field: nulls.Nulls{Value: p.ClinicalConsent}, Name: "ClinicalConsent"},
 	), nil
-}
-
-// ValidateCreate gets run every time you call "pop.ValidateAndCreate" method.
-// This method is not required and may be deleted.
-func (p *ProjectConsent) ValidateCreate(tx *pop.Connection) (*validate.Errors, error) {
-	return validate.NewErrors(), nil
-}
-
-// ValidateUpdate gets run every time you call "pop.ValidateAndUpdate" method.
-// This method is not required and may be deleted.
-func (p *ProjectConsent) ValidateUpdate(tx *pop.Connection) (*validate.Errors, error) {
-	return validate.NewErrors(), nil
 }
